--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "test",
-    
+    "start": "node index.js",
+     
     "deploy": "netlify deploy"
   },
   "repository": {
