--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "bugs": {
     "url": "https://github.com/IgorSapko/bike-back/issues"
   },
-  
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
